--- a/index.html
+++ b/index.html
@@ -58,12 +58,22 @@
                 <h2 class="visually-hidden" hidden>item</h2>
                 <ul class="second-list">
                     <li class="second-list-item">
+                        <div class="second-list-container">
+                            <svg class="second-list-item-icon" width="64" height="64">
+                                <use href="./images/icons/sprite-icons.svg#icon-group"></use>
+                            </svg>
+                        </div>
                         <h3 class="section-head">Strategy</h3>
                         <p class="text">Our goal is to identify the business problem to walk away with the perfect and
                             creative solution.
                         </p>
                     </li>
                     <li class="second-list-item">
+                        <div class="second-list-container">
+                            <svg class="second-list-item-icon" width="64" height="64">
+                                <use href="./images/icons/sprite-icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="section-head">Punctuality</h3>
                         <p class="text">Bring the key message to the brand's audience for the best price within the
                             shortest
@@ -71,6 +81,11 @@
                             time.</p>
                     </li>
                     <li class="second-list-item">
+                        <div class="second-list-container">
+                            <svg class="second-list-item-icon" width="64" height="64">
+                                <use href="./images/icons/sprite-icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="section-head">Diligence</h3>
                         <p class="text">Research and confirm brands that present the strongest digital growth
                             opportunities
@@ -78,6 +93,11 @@
                             risk.</p>
                     </li>
                     <li class="second-list-item">
+                        <div class="second-list-container">
+                            <svg class="second-list-item-icon" width="64" height="64">
+                                <use href="./images/icons/sprite-icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="section-head">Technologies</h3>
                         <p class="text">Design practice focused on digital experiences. We bring forth a deep passion
                             for
@@ -95,6 +115,33 @@
                         <div class="container-worker">
                             <h3 class="section-head">Mark Guerrero</h3>
                             <p class="text">Product Designer</p>
+                            <ul class="social-list-worker">
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-twitter"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="section-third-list-item">
@@ -102,6 +149,36 @@
                         <div class="container-worker">
                             <h3 class="section-head">Tom Ford</h3>
                             <p class="text">Frontend Developer</p>
+                            <ul class="social-list-worker">
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-twitter"></use>
+                                        </svg></a>
+                                    </a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                    </a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="section-third-list-item">
@@ -109,6 +186,36 @@
                         <div class="container-worker">
                             <h3 class="section-head">Camila Garcia</h3>
                             <p class="text">Marketing</p>
+                            <ul class="social-list-worker">
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-twitter"></use>
+                                        </svg></a>
+                                    </a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                    </a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="section-third-list-item">
@@ -116,6 +223,36 @@
                         <div class="container-worker">
                             <h3 class="section-head">Daniel Wilson</h3>
                             <p class="text">UI Designer</p>
+                            <ul class="social-list-worker">
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-twitter"></use>
+                                        </svg></a>
+                                    </a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                    </a>
+                                </li>
+                                <li class="social-list-worker-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-worker-icon" width="16" height="16">
+                                            <use href="./images/icons/sprite-icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -175,10 +312,43 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container main-footer">
             <a class="footer-link" href="./index.html"><span class="logo">Web</span>Studio</a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
                 growth solutions.</p>
+        </div>
+        <div class="container social">
+            <h3 class="footer-headline">Social media</h3>
+            <ul class="footer-social-list">
+                <li class="footer-social-list-item">
+                    <a href="" class="footer-social-list-link">
+                        <svg class="social-footer-icon" width="24" height="24">
+                            <use href="./images/icons/sprite-icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list-item">
+                    <a href="" class="footer-social-list-link">
+                        <svg class="social-footer-icon" width="24" height="24">
+                            <use href="./images/icons/sprite-icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list-item">
+                    <a href="" class="footer-social-list-link">
+                        <svg class="social-footer-icon" width="24" height="24">
+                            <use href="./images/icons/sprite-icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list-item">
+                    <a href="" class="footer-social-list-link">
+                        <svg class="social-footer-icon" width="24" height="24">
+                            <use href="./images/icons/sprite-icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </div>
     </footer>
 </body>
