--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="./index.html"><span class="logo">Web</span>Studio</a>
                 <ul class="nav-list">
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link" href="">Studio</a>
+                        <a class="nav-list-item-link active-link" href="">Studio</a>
                     </li>
                     <li class="nav-list-item">
                         <a class="nav-list-item-link" href="">Portfolio</a>
@@ -263,92 +263,140 @@
                 <h2 class="section-header">Our portfolio</h2>
                 <ul class="section-fourth-list">
                     <li class="section-fourth-list-item">
-                        <img src="./images/portfolio/BankingApp.jpg" alt="Banking App" width="360" height="300" />
+                        <div class="project-image">
+                            <img src="./images/portfolio/BankingApp.jpg" alt="Banking App" width="360" height="300" />
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="project-case">
                             <h3 class="section-head">Banking App</h3>
                             <p class="text">App</p>
                         </div>
                     </li>
                     <li class="section-fourth-list-item">
-                        <img src="./images/portfolio/CashlessPayment.jpg" alt="Cashless Payment" width="360"
-                            height="300" />
+                        <div class="project-image">
+                            <img src="./images/portfolio/CashlessPayment.jpg" alt="Cashless Payment" width="360"
+                                height="300" />
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="project-case">
                             <h3 class="section-head">Cashless Payment</h3>
                             <p class="text">Marketing</p>
                         </div>
                     </li>
                     <li class="section-fourth-list-item">
-                        <img src="./images/portfolio/MeditationApp.jpg" alt="Meditation App" width="360" height="300" />
+                        <div class="project-image">
+                            <img src="./images/portfolio/MeditationApp.jpg" alt="Meditation App" width="360"
+                                height="300" />
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="project-case">
                             <h3 class="section-head">Meditation App</h3>
                             <p class="text">App</p>
                         </div>
                     </li>
                     <li class="section-fourth-list-item">
-                        <img src="./images/portfolio/TaxiService.jpg" alt="Taxi Service" width="360" height="300" />
+                        <div class="project-image">
+                            <img src="./images/portfolio/TaxiService.jpg" alt="Taxi Service" width="360" height="300" />
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="project-case">
                             <h3 class="section-head">Taxi Service</h3>
                             <p class="text">Marketing</p>
                         </div>
                     </li>
                     <li class="section-fourth-list-item">
-                        <img src="./images/portfolio/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360"
-                            height="300" />
+                        <div class="project-image">
+                            <img src="./images/portfolio/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360"
+                                height="300" />
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="project-case">
                             <h3 class="section-head">Screen Illustrations</h3>
                             <p class="text">Design</p>
                         </div>
                     </li>
                     <li class="section-fourth-list-item">
-                        <img src="./images/portfolio/OnlineCourses.jpg" alt="Online Courses" width="360" height="300" />
+                        <div class="project-image">
+                            <img src="./images/portfolio/OnlineCourses.jpg" alt="Online Courses" width="360"
+                                height="300" />
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
+                        </div>
                         <div class="project-case">
                             <h3 class="section-head">Online Courses</h3>
                             <p class="text">Marketing</p>
                         </div>
-                    </li>
-                </ul>
+            </div>
+            </li>
+            </ul>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <div class="container main-footer">
-            <a class="footer-link" href="./index.html"><span class="logo">Web</span>Studio</a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
-        </div>
-        <div class="container social">
-            <h3 class="footer-headline">Social media</h3>
-            <ul class="footer-social-list">
-                <li class="footer-social-list-item">
-                    <a href="" class="footer-social-list-link">
-                        <svg class="social-footer-icon" width="24" height="24">
-                            <use href="./images/icons/sprite-icons.svg#icon-instagram"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-list-item">
-                    <a href="" class="footer-social-list-link">
-                        <svg class="social-footer-icon" width="24" height="24">
-                            <use href="./images/icons/sprite-icons.svg#icon-twitter"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-list-item">
-                    <a href="" class="footer-social-list-link">
-                        <svg class="social-footer-icon" width="24" height="24">
-                            <use href="./images/icons/sprite-icons.svg#icon-facebook"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-list-item">
-                    <a href="" class="footer-social-list-link">
-                        <svg class="social-footer-icon" width="24" height="24">
-                            <use href="./images/icons/sprite-icons.svg#icon-linkedin"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+        <div class="container footer-wrapper">
+            <div class="main-footer">
+                <a class="footer-link" href="./index.html"><span class="logo">Web</span>Studio</a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
+                    &
+                    growth solutions.</p>
+            </div>
+            <div class="footer-social">
+                <h3 class="footer-headline">Social media</h3>
+                <ul class="footer-social-list">
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-link">
+                            <svg class="social-footer-icon" width="24" height="24">
+                                <use href="./images/icons/sprite-icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-link">
+                            <svg class="social-footer-icon" width="24" height="24">
+                                <use href="./images/icons/sprite-icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-link">
+                            <svg class="social-footer-icon" width="24" height="24">
+                                <use href="./images/icons/sprite-icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-link">
+                            <svg class="social-footer-icon" width="24" height="24">
+                                <use href="./images/icons/sprite-icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
